# fenics_optimize

./: .gitignore  .logamgx  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  cma.txt  disp.h5  disp.xdmf  docker-compose.yml  elasticity.py  setup.cfg  topopt.py
.docker_morphogenesis/: docker-compose.yml
.docker_morphogenesis_amgx/: docker-compose.yml
.docker_optimize/: docker-compose.yml
.docker_optimize_dev/: docker-compose.yml
Morphogenesis/: __init__.py
Morphogenesis/Optimizer/: Utils.py
Morphogenesis/Solvers/: AMGsolver.py  SLUDsolver.py
docs/: Core.html  Filters.html  Mechanics.html  Optimizer.html  Solvers.html  Utilities.html  core.html  filters.html  index.html  optimizer.html  solver.html  utils.html
docs/optfx/: core.html  filters.html  index.html
docs/optimize/: Optimizer.html  Solvers.html  fecr.html  index.html
docs/shells/: index.html
docs/shells/common/: constitutive_models.html  energy.html  index.html  kinematics.html  laminates.html
examples/: anisoElast.py  anisotropicTopOpt.py  bridge.py  elasticity.py  helpers.py  minmax.py  orientation.py  pattern_mbb.py  poisson.py  poisson_helmholtz.py  stress_constraint.py
fenics_optimize/: Core.py  Filters.py  Mechanics.py  Optimizer.py  Solvers.py  Utilities.py  __init__.py  core.py  filters.py  optimizer.py  solver.py  utils.py
installation/: INSTALL.md
morphogenesis/: AMGsolver.py  Core.py  Filters.py  Optimizer.py  Solvers.py  Sugar.py  __init__.py
morphogenesis/Helpers/: Chain.py  Elasticity.py
morphogenesis/Solvers/: SLUDsolver.py
morphogenesis/Utils/: file_io.py
optfx/: __init__.py  core.py  filters.py  optimizer.py  utils.py
optimize/: Core.py  Elasticity.py  Filters.py  Mechanics.py  Optimizer.py  Solvers.py  Utilities.py  __init__.py  _backends.py  fecr.py
optimize/shells/: AUTHORS  __init__.py
test/: amgx.py  biridge.py  bridge.py  external_mesh.py  ipopt.py  topopt.py
tests/: test.py
(+21 files in other folders)
