[metadata]
name = morphogenesis
version = attr: Morphogenesis.__version__
author = Naruki Ichihara
author_email = csna20005@g.nihon-u.ac.jp
long_description = file:README.md
url = https://github.com/Naruki-Ichihara/morphogenesis
license = MIT
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    
[options]
zip_safe = False
packages = find: