[metadata]
name = optfx
version = attr: optfx.__version__
author = Naruki Ichihara
author_email = ichihara.naruki@gmail.com
long_description = file:README.md
url = https://github.com/Naruki-Ichihara/fenics-optimize
license = LICENSE
classifier =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    
[options]
zip_safe = False
packages = find:
install_requires =
  dataclasses
  numpy